dnl
dnl Copyright (C) 2004-2010 Kazuyoshi Aizawa. All rights reserved.                     
dnl                                                                               
dnl Redistribution and use in source and binary forms, with or without            
dnl modification, are permitted provided that the following conditions            
dnl are met:                                                                      
dnl                                                                               
dnl 1. Redistributions of source code must retain the above copyright             
dnl   notice, this list of conditions and the following disclaimer.               
dnl 2. Redistributions in binary form must reproduce the above copyright          
dnl   notice, this list of conditions and the following disclaimer in the         
dnl   documentation and/or other materials provided with the distribution.        
dnl                                                                               
dnl THIS SOFTWARE IS PROVIDED BY AUTHOR AND CONTRIBUTORS ``AS IS'' AND            
dnl ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE         
dnl IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE    
dnl ARE DISCLAIMED.  IN NO EVENT SHALL AUTHOR OR CONTRIBUTORS BE LIABLE           
dnl FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL    
dnl DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS       
dnl OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)         
dnl HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT    
dnl LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY     
dnl OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF        
dnl SUCH DAMAGE.                                                                  
dnl

AC_INIT
AC_PROG_CC
AC_CHECK_PROG(ISAINFO, isainfo, yes, not found. assuming 32bit, /usr/bin)
if test "$ISAINFO" = "yes" ;
then
    KARCH=`/usr/bin/isainfo -k`
else
    KARCH='i386'
fi

AC_CHECK_PROG(UNAME, uname, yes, not found, /usr/bin)
AC_CHECK_PROG(CUT, cut, yes, not found, /usr/bin)

if test "$UNAME" = "yes" -a "$CUT" = "yes" ; then 
     MAJOR_VERSION=`uname -r | cut -f 1 -d.` 
     MINOR_VERSION=`uname -r | cut -f 2 -d.`
else
    exit
fi

if test "$MAJOR_VERSION" -ge 5 ; then
   if test "$MINOR_VERSION" -ge 10 ; then
        CFLAGS="$CFLAGS -DSOL10"
   fi
fi

IS_GNU_LD=`ld --version 2>&1 | grep GNU`

if test "$GCC" = yes; then
        GCC_VERSION=`gcc -v 2>&1 |grep "gcc version" | awk '{print $3}'`
        GCC_MAJOR_VERSION=`echo $GCC_VERSION | cut -f 1 -d .`
        GCC_MINOR_VERSION=`echo $GCC_VERSION | cut -f 2 -d .`
fi

if test "$GCC_MAJOR_VERSION" -ge 4 -a "$MINOR_VERSION" -ge 5 ; then
    CFLAGS="$CFLAGS -D__builtin_stdarg_start=__builtin_va_start"
fi

KCFLAGS="$KCFLAGS -O -D_KERNEL"

case $KARCH in
     'sparc')
	DRV_DIR="/kernel/drv"
	;;
      'sparcv9')
        if test "$GCC" = yes; then
	    KCFLAGS="$KCFLAGS -m64"
	else
	    KCFLAGS="$KCFLAGS -xarch=v9"
	fi
	DRV_DIR="/kernel/drv/sparcv9"
        if test -n "$IS_GNU_LD";
        then
            LD_OPT="-melf64_sparc"
        fi
	;;
      'amd64')
        if test "$GCC" = yes; then
             if test "$GCC_MAJOR_VERSION" -ge 4 \
                -a "$MINOR_VERSION" -ge 5 ; then
                 KCFLAGS="$KCFLAGS -m64 -mcmodel=large -mno-red-zone"
             else
                 KCFLAGS="$KCFLAGS -m64 -mcmodel=kernel -mno-red-zone"
             fi
        else
             KCFLAGS="$KCFLAGS -m64 -xmodel=kernel"
        fi
        DRV_DIR="/usr/kernel/drv/amd64"
        if test -n "$IS_GNU_LD";
        then
             LD_OPT="-melf_x86_64"
        fi
        ;;
esac

STE_VER="1.1.0"
AC_ARG_ENABLE(debug,[  --enable-debug         Enable Debuging])
if test "$enable_debug" = "yes"; then
  CFLAGS="$CFLAGS -DDEBUG"
  KCFLAGS="$KCFLAGS -DDEBUG"
fi

AC_DEFINE_UNQUOTED(STE_VER,"$STE_VER")
AC_SUBST(CC)
AC_SUBST(KCFLAGS)
AC_SUBST(DRV_DIR)
AC_SUBST(CFLAGS)
AC_SUBST(M64_OPT)
AC_SUBST(LD_OPT)

AC_OUTPUT(Makefile)
